src/test/deca/context/invalid/declClass-doubleDeclaration.context
declClass-doubleDeclaration.deca:7: